# scorpi

./: .clang-format  BUILD.md  LICENSE  README.md  build.sh  catalog.json  meson.build  run.sh  scorpi.entitlements  templates.json
firmware/: SCORPI_EFI.fd
include/: acpi.h  acpi_device.h  ahci.h  arch.h  basl.h  bhyvegc.h  bhyverun.h  block_if.h  bootrom.h  cfi_reg.h  cnc.h  common.h  compat.h  config.h  console.h  debug.h  e1000_defines.h  e1000_regs.h  edid.h  iov.h  mem.h  mevent.h  mii.h  net_backends.h  net_backends_priv.h  pci_emul.h  pci_irq.h  pci_xhci.h  qemu_fwcfg.h  rfb.h  run.h  smbiostbl.h  sockstream.h  tpm_emul.h  uart_backend.h  uart_emul.h  usb.h  usb_cdc.h  usb_emul.h  usb_endian.h  (+7 more)
include/support/: ata.h  atomic.h  bitset.h  (+9 more)
libfdt/: meson.build
libnv/: bsd_nvpair.c  libnv.c  meson.build  nv.h  nv_impl.h  nvlist_impl.h  nvpair_impl.h
libutil/: expand_number.c  hexdump.c  libutil.h  md5.c  meson.build
mjson/: meson.build  mjson.c  mjson.h
src/: acpi.c  acpi_device.c  basl.c  bhyvegc.c  bhyverun.c  block_if.c  bootrom.c  cnc.c  compat.c  config.c  console.c  debug.c  iov.c  mem.c  mevent.c  net_backends.c  net_utils.c  pci_82545.c  pci_ahci.c  pci_emul.c  pci_fbuf.c  pci_hostbridge.c  pci_virtio_block.c  pci_virtio_console.c  pci_virtio_gpu.c  pci_virtio_net.c  pci_virtio_rnd.c  pci_xhci.c  qemu_fwcfg.c  qemu_loader.c  rfb.c  rtc_pl031.c  slirp_net_backend.c  smbiostbl.c  sockstream.c  tpm_device.c  uart_backend.c  uart_emul.c  uart_pl011.c  usb_emul.c  (+6 more)
tests/: fdt_test.c  meson.build  nvlist_test.c  test.dts
util/: tty.c  virtio_tty.c
(+26 files in other folders)
